<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/humHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/humHeaderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toEndOf="@+id/tempHeader"
        app:layout_constraintTop_toTopOf="@+id/tempHeader" />

    <TextView
        android:id="@+id/tempHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:text="@string/tempHeaderText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorHeader" />

    <TextView
        android:id="@+id/sensorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sensorHeaderText"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/unitRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/celsiusBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="°C" />

        <RadioButton
            android:id="@+id/fahrBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="°F" />
    </RadioGroup>

    <TextView
        android:id="@+id/tempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempHeader" />

    <TextView
        android:id="@+id/humText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="72dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humHeader" />

    <TextView
        android:id="@+id/sensorInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sensorIntervalText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humText" />

    <com.google.android.material.slider.Slider
        android:id="@+id/intervalSlider"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorInterval"
        android:valueFrom="5.0"
        android:valueTo="120.0"
        android:stepSize="5.0"/>

    <TextView
        android:id="@+id/intervalVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="5s"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalSlider" />

    <View
        android:id="@+id/divider3"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intervalVal" />

    <TextView
        android:id="@+id/buttonHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/buttonHeaderText"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="205dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        android:clickable="false"
        android:text="ToggleButton"
        android:textOff="@string/buttonNotPresssed"
        android:textOn="@string/buttonPresssed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHeader" />

    <View
        android:id="@+id/divider4"
        android:layout_width="391dp"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toggleButton2" />

    <TextView
        android:id="@+id/ledHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/ledHeaderText"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <com.google.android.material.slider.Slider
        android:id="@+id/redLedSlider"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="12dp"
        android:valueFrom="0.0"
        android:valueTo="255.0"
        app:haloColor="#D32F2F"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ledHeader"
        app:thumbColor="#E53935"
        app:tickColorInactive="#F44336"
        app:trackColorActive="#F44336"
        app:trackColorInactive="#F44336" />

    <com.google.android.material.slider.Slider
        android:id="@+id/blueLedSlider"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:valueFrom="0.0"
        android:valueTo="255.0"
        app:haloColor="#1976D2"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenLedSlider"
        app:thumbColor="#1976D2"
        app:tickColorInactive="#1976D2"
        app:trackColorActive="#1976D2"
        app:trackColorInactive="#1976D2" />

    <com.google.android.material.slider.Slider
        android:id="@+id/greenLedSlider"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        android:valueFrom="0.0"
        android:valueTo="255.0"
        app:haloColor="#388E3C"
        app:labelBehavior="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redLedSlider"
        app:thumbColor="#388E3C"
        app:tickColorInactive="#4CAF50"
        app:trackColorActive="#4CAF50"
        app:trackColorInactive="#66BB6A" />

</androidx.constraintlayout.widget.ConstraintLayout>